# rms

./: .gitignore  registration.py
config/: vx250_viewpoints.txt  vx300s_viewpoints.txt
models/pcd/: object_b.pcd  object_b_bottomless.pcd
modules/: collection.py  conversion.py  manipulator.py  manipulators.py  registration.py  registration2.py
pointclouds/models/: object_b.stl
pointclouds/scans/: vx250_001.pcd  vx300s_001.pcd  vx300s_003.pcd  vx300s_004.pcd  vx300s_tfs.txt
pointclouds/scans/test/unmerged/: vx250_002.pcd  vx250_003.pcd  vx250_004.pcd  vx250_tfs.txt  vx250_viewpoints.txt  vx300s_002.pcd
pointclouds/scans/test2/unmerged/: vx250_001.pcd  vx250_002.pcd  vx250_003.pcd  vx250_004.pcd
rms_ws/: ScreenCamera_2024-08-14-10-59-59.json
rms_ws/src/rms_collection/: package.xml  setup.cfg  setup.py
rms_ws/src/rms_collection/src/: collect_at_viewpoints_server.py  collection_server.py
rms_ws/src/rms_msgs/: CMakeLists.txt  package.xml
rms_ws/src/rms_msgs/action/: GripObjectToScan.action  PCDCollection.action  (+2 more)
rms_ws/src/rms_nodes/: package.xml  setup.cfg  setup.py
rms_ws/src/rms_nodes/launch/: camera.launch.py  manipulator.launch.py  primary.launch.py  rms.launch.py  secondary.launch.py
rms_ws/src/rms_nodes/rms_nodes/: _configuration1.py  _configuration2.py  collect_at_viewpoints_server.py  register_to_model_server.py
rms_ws/src/rms_nodes/src/: collect_pointclouds_at_viewpoints.py  demo1.py  demo2.py  demo3.py  grip_demo.py  grip_object_to_scan.py  main.py  register_pointclouds_to_model.py  save_pointclouds.py
rms_ws/src/rms_nodes_cpp/: CMakeLists.txt  package.xml
rms_ws/src/rms_nodes_py/: package.xml  setup.cfg  setup.py
rms_ws/src/rms_registration/: package.xml  setup.cfg  setup.py
rms_ws/src/rms_registration/src/: global_registration_server.py  local_registration_server.py  register_to_model_server.py  test_registration.py
(+8 files in other folders)
