<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rms_nodes</name>
  <version>0.0.0</version>
  <description>ROS2 nodes for RMS PCD collection and registration.</description>
  <maintainer email="marinarasauced@outlook.com">marinarasauced</maintainer>
  <license>Private License</license>

  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>rms_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
