<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rms_registration</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="FirstNameLastName@gmail.com">viperx250</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclpy</depend>
  <depend>rms_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
